[package]
name = "mini-container"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.7", features = ["derive"] }
libc = "0.2.149"
nix = { version = "0.27.1", features = ["sched", "socket", "hostname", "fs", "mount"] }
rand = "0.8.5"
syscallz = "0.17.0"
